Docker and ci pipeline